<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit"
        android:icon="?icon_pencil_grey"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit_subject"
        android:title="@string/action_edit_subject"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit_teacher"
        android:title="@string/action_edit_teacher"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:icon="?icon_pencil_grey"
        android:title="@string/action_delete"
        app:showAsAction="never" />

</menu>
