<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:text="@string/main_support_0_title"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="?android:textColorPrimary"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:text="@string/main_support_0_summary" />

        <com.yarolegovich.discretescrollview.DiscreteScrollView
            android:id="@+id/picker"
            android:layout_width="match_parent"
            android:layout_height="@dimen/donate_view_height"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/donate_view_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:text="@string/main_support_1_title"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="?android:textColorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:text="@string/main_support_1_summary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:text="@string/main_support_2_title"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="?android:textColorPrimary" />

        <include
            android:id="@+id/rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/item_donate_non_monetary" />

        <include
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/item_donate_non_monetary" />

        <include
            android:id="@+id/dev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/item_donate_non_monetary" />

        <include
            android:id="@+id/translate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/item_donate_non_monetary" />

        <include
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/item_donate_non_monetary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:text="@string/main_support_2_summary" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>