<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/___fragment_user_edit">

    <FrameLayout
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user.avatar"
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:civ_border_color="#22888888"
            app:civ_border_width="8dp" />

        <ImageView
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_avatar"
            android:scaleType="center"
            android:src="@drawable/ic_camera_alt_white_24dp" />

    </FrameLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="72dp"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="24dp"
                    android:src="?icon_account_grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/info.user.name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:layout_marginTop="12dp"
                        android:hint="@string/hint_name"
                        android:inputType="textPersonName"
                        android:textAppearance="@style/DetailsItemText" />

                    <EditText
                        android:id="@+id/info.user.details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:layout_marginTop="12dp"
                        android:hint="@string/hint_details"
                        android:inputType="textShortMessage"
                        android:textAppearance="@style/DetailsItemText" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="72dp"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:src="?icon_email_grey" />

                <EditText
                    android:id="@+id/info.email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textAppearance="@style/DetailsItemText" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Space
        android:layout_width="0dp"
        android:layout_height="800dp" />

</merge>